--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/testdb
-spring.datasource.username=root
-spring.datasource.password=dev
+spring.datasource.username=mysql
+spring.datasource.password=mysql
 
 spring.jpa.hibernate.ddl-auto=create
 
