--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:9999/testdb
+spring.datasource.url=jdbc:mysql://localhost:9999/testdb?useSSL=false
 spring.datasource.username=mysql
 spring.datasource.password=mysql
 
